Corrected button alignment

--- a/CSS files/landingpage.css
+++ b/CSS files/landingpage.css
@@ -493,7 +493,7 @@ input[type="submit"] {
     font-size: 0.75rem;
     width: 70%; 
     height: 2rem; 
-    padding: 0.3rem 1rem;
+    padding: 5%;
   }
   .mess {
     width: 60%;     
